[package]
name = "acodeh"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
futures = "0.3.31"
ignore = "0.4.24"
pdf-extract = "0.10.0"
reqwest = { version = "0.12.23", features = ["json", "stream"] }
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full", "macros", "rt", "rt-multi-thread"] }
